--- a/index.html
+++ b/index.html
@@ -1,1 +1,132 @@
-test
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <title>Spidy Base</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Prompt:300,400,600|Roboto:300,400,500&amp;subset=thai" rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bgc-dark">
+            <div class="container">
+                <a class="navbar-brand" href="/">
+                    <img src="images/logo.png" height="43" class="d-inline-block align-top">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">หน้าแรก
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                ผลิตภัณฑ์
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Cloud Server</a>
+                                <a class="dropdown-item" href="#">Cloud Hosting</a>
+                                <a class="dropdown-item" href="#">Domain Name</a>
+                                <a class="dropdown-item" href="#">SSL</a>
+                                <a class="dropdown-item" href="#">Storage</a>
+                                <a class="dropdown-item" href="#">Database</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                โซลูชั่น
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Gaming</a>
+                                <a class="dropdown-item" href="#">SAP</a>
+                                <a class="dropdown-item" href="#">E-Commerce</a>
+                                <a class="dropdown-item" href="#">IoT</a>
+                                <a class="dropdown-item" href="#">Web Hosting</a>
+                                <a class="dropdown-item" href="#">Digitals Marketing</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ราคา</a>
+                        </li>
+                    </ul>
+                    <hr>
+                    <div class="my-2 my-lg-0">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item">
+                                <a class="nav-link form-search-icon" href="#">
+                                    <i class="fa fa-search"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">ติดต่อเรา</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">บล็อก</a>
+                            </li>
+                            <span class="hr-vertical"></span>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navDropLogin" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false">
+                                    <i class="fa fa-fw fa-user icon-nav-user"></i>
+                                    <span class="login-text">เข้าสู่ระบบ</span>
+                                </a>
+                                <div class="dropdown-menu drop-login" aria-labelledby="navDropLogin">
+                                    <form class="form-signin">
+                                        <input type="email" class="form-control nav-login" placeholder="Email address" required="" autofocus="">
+                                        <input type="password" class="form-control nav-login" placeholder="Password" required="">
+                                        <button class="btn btn-sm btn-secondary btn-block" type="submit">เข้าสู่ระบบ</button>
+                                    </form>
+                                    <a class="dropdown-item" href="#">สมัครสมาชิก</a>
+                                    <a class="dropdown-item" href="#">ลืมรหัสผ่าน</a>
+                                </div>
+                            </li>
+                        </ul>
+                        <div class="search-box">
+                            <form class="form-inline form-search">
+                                <input class="form-control" type="search" placeholder="ค้นหา" aria-label="Search">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <section id="customize">
+        <div class="container">
+            <h1 class="header-section">Spidy
+                <span class="header-section-sub">Server</span>
+            </h1>
+            <p>เซิร์ฟเวอร์คลาวด์ที่มีประสิทธิภาพในโครงสร้างพื้นฐานขององค์กรด้วยการจำลองเสมือนแบบ KVM</p>
+
+            <h6>ระบบปฎิบัติการ</h6>
+            <!-- <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div> -->
+        </div>
+    </section>
+</body>
+
+</html>
