--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bgc-dark">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bgc-dark">
             <div class="container">
                 <a class="navbar-brand" href="/">
                     <img src="images/logo.png" height="43" class="d-inline-block align-top">
@@ -117,16 +117,157 @@
             <p>เซิร์ฟเวอร์คลาวด์ที่มีประสิทธิภาพในโครงสร้างพื้นฐานขององค์กรด้วยการจำลองเสมือนแบบ KVM</p>
 
             <h6>ระบบปฎิบัติการ</h6>
-            <!-- <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div> -->
+            <ul class="os-slider">
+                <li class="oslist">
+                    <div class="card active">
+                        <div class="card-head">
+                            <img class="os-img" src="images/os_1.png" width="80">
+                            <p class="title">Ubuntu</p>
+                        </div>
+                        <div class="card-body">
+                            <select class="form-control">
+                                <option>16.04.4 x64</option>
+                                <option>16.04.4 x32</option>
+                                <option>14.04.5 x64</option>
+                            </select>
+                        </div>
+                    </div>
+                </li>
+                <li class="oslist">
+                    <div class="card">
+                        <div class="card-head">
+                            <img class="os-img" src="images/os_2.png" width="80">
+                            <p>Debian</p>
+                        </div>
+                        <div class="card-body">
+                            <select class="form-control">
+                                <option>9.4 x64</option>
+                                <option>9.4 x32</option>
+                            </select>
+                        </div>
+                    </div>
+                </li>
+                <li class="oslist">
+                    <div class="card">
+                        <div class="card-head">
+                            <img class="os-img" src="images/os_3.png" width="80">
+                            <p>CentOS</p>
+                        </div>
+                        <div class="card-body">
+                            <select class="form-control">
+                                <option>7.4 x64</option>
+                                <option>7.4 x32</option>
+                            </select>
+                        </div>
+                    </div>
+                </li>
+                <li class="oslist">
+                    <div class="card">
+                        <div class="card-head">
+                            <img class="os-img" src="images/os_4.png" width="80">
+                            <p>Julicloud</p>
+                        </div>
+                        <div class="card-body">
+                            <select class="form-control">
+                                <option>Juli 1.2 x64</option>
+                                <option>Juli 1.2 x32</option>
+                            </select>
+                        </div>
+                    </div>
+                </li>
+                <li class="oslist">
+                    <div class="card">
+                        <div class="card-head">
+                            <img class="os-img" src="images/os_5.png" width="80">
+                            <p>Windows</p>
+                        </div>
+                        <div class="card-body">
+                            <select class="form-control">
+                                <option>Windows 10 x64</option>
+                                <option>Windows 10 x32</option>
+                            </select>
+                        </div>
+                    </div>
+                </li>
+            </ul>
         </div>
     </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 
 </html>
