--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                     </div>
                 </li>
             </ul>
+            <h6>เลือกภูมิภาคดาต้าเซ็นเตอร์</h6>
         </div>
     </section>
     <br>
