--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-slider.min.css">
     <link rel="stylesheet" href="css/style.css">
 
     <script src="js/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+        crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-slider.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Prompt:300,400,600|Roboto:300,400,500&amp;subset=thai" rel="stylesheet">
 </head>
@@ -109,7 +113,7 @@
             </div>
         </nav>
     </header>
-    <section id="customize">
+    <section class="pt-100" id="customize">
         <div class="container">
             <h1 class="header-section">Spidy
                 <span class="header-section-sub">Server</span>
@@ -119,10 +123,12 @@
             <h6>ระบบปฎิบัติการ</h6>
             <ul class="os-slider">
                 <li class="oslist">
-                    <div class="card active">
+                    <div class="card">
                         <div class="card-head">
                             <img class="os-img" src="images/os_1.png" width="80">
-                            <p class="title">Ubuntu</p>
+                            <p class="title">
+                                Ubuntu
+                            </p>
                         </div>
                         <div class="card-body">
                             <select class="form-control">
@@ -137,7 +143,9 @@
                     <div class="card">
                         <div class="card-head">
                             <img class="os-img" src="images/os_2.png" width="80">
-                            <p>Debian</p>
+                            <p class="title">
+                                Debian
+                            </p>
                         </div>
                         <div class="card-body">
                             <select class="form-control">
@@ -151,7 +159,9 @@
                     <div class="card">
                         <div class="card-head">
                             <img class="os-img" src="images/os_3.png" width="80">
-                            <p>CentOS</p>
+                            <p class="title">
+                                CentOS
+                            </p>
                         </div>
                         <div class="card-body">
                             <select class="form-control">
@@ -165,7 +175,10 @@
                     <div class="card">
                         <div class="card-head">
                             <img class="os-img" src="images/os_4.png" width="80">
-                            <p>Julicloud</p>
+
+                            <p class="title">
+                                Julicloud
+                            </p>
                         </div>
                         <div class="card-body">
                             <select class="form-control">
@@ -179,7 +192,9 @@
                     <div class="card">
                         <div class="card-head">
                             <img class="os-img" src="images/os_5.png" width="80">
-                            <p>Windows</p>
+                            <p class="title">
+                                Windows
+                            </p>
                         </div>
                         <div class="card-body">
                             <select class="form-control">
@@ -191,84 +206,166 @@
                 </li>
             </ul>
             <h6>เลือกภูมิภาคดาต้าเซ็นเตอร์</h6>
+            <ul class="dtc-slider">
+                <li class="datacenter">
+                    <div class="dtc-list">
+                        <p class="dtc-text">ไทย</p>
+                    </div>
+                </li>
+                <li class="datacenter">
+                    <div class="dtc-list">
+                        <p class="dtc-text">สิงคโปร์</p>
+                    </div>
+                </li>
+                <li class="datacenter">
+                    <div class="dtc-list">
+                        <p class="dtc-text">จีน</p>
+                    </div>
+                </li>
+                <li class="datacenter">
+                    <div class="dtc-list">
+                        <p class="dtc-text">อังกฤษ</p>
+                    </div>
+                </li>
+            </ul>
+            <div class="row">
+                <div class="col-md-2 text-left">
+                    <p class="req-os-text">vCPUs
+                        <i class="fa fa-info-circle text-warning" data-toggle="tooltip" data-placement="right" title="Tooltip on right"></i>
+                    </p>
+
+                </div>
+                <div class="col">
+                    <input id="cpu" data-slider-id='cpu' data-slider-tooltip="hide" type="text" data-slider-min="1" data-slider-max="16" data-slider-step="1"
+                        data-slider-value="1" />
+                </div>
+                <div class="col-md-2 text-right f-14">
+                    <span id="data-cpu">1</span>/16 vCPU
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 text-left">
+                    <p class="req-os-text">Memory
+                        <i class="fa fa-info-circle text-warning" data-toggle="tooltip" data-placement="right" title="Tooltip on right"></i>
+                    </p>
+                </div>
+                <div class="col">
+                    <input id="memory" data-slider-id="memory" data-slider-tooltip="hide" type="text" data-slider-min="2" data-slider-max="64"
+                        data-slider-step="2" data-slider-value="2" />
+                </div>
+                <div class="col-md-2 text-right f-14">
+                    <span id="data-memory">2</span>/64 GB
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 text-left">
+                    <p class="req-os-text">SSD Disk
+                        <i class="fa fa-info-circle text-warning" data-toggle="tooltip" data-placement="right" title="Tooltip on right"></i>
+                    </p>
+                </div>
+                <div class="col">
+                    <input id="disk" data-slider-id="disk" data-slider-tooltip="hide" type="text" data-slider-min="100" data-slider-max="1000"
+                        data-slider-step="100" data-slider-value="100" />
+                </div>
+                <div class="col-md-2 text-right f-14">
+                    <span id="data-disk">100</span>GB/1TB
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-auto col-lg-8 text-right">
+                    <h3 class="color-theme">
+                        <span id="totalprice">฿499</span>
+                        <p>/month</p>
+                    </h3>
+                </div>
+                <div class="col col-lg-4">
+                    <button type="button" class="btn btn-primary btn-lg btn-block bg-theme">สร้าง</button>
+                </div>
+            </div>
+            <h2 class="header-section h-package">Spidy
+                <span class="header-section-sub">Server</span>
+            </h2>
+            <div class="package-list">
+                <div class="card mb-3 text-dark">
+                    <div class="card-header bg-theme">Student PACK1
+                        <h2 class="mt-3">฿499</h2>
+                        <p class="f-20">/เดือน</p>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text text-left">แพ็กเกจเริ่มต้นสำหรับผู้ที่ต้องการ ทดลองใช้ cloud server และมี ความรู้พื้นฐานด้าน server</p>
+                    </div>
+                    <div class="card-body secondary">
+                        <ul>
+                            <li>
+                                <p class="card-text text-left">
+                                    <i class="fa fa-fw fa-sliders color-theme"></i>
+                                    สามารถควบคุมผ่านBrowser
+                                </p>
+                            </li>
+                            <li>
+                                <p class="card-text text-left">
+                                    <i class="fa fa-fw fa-server color-theme"></i>
+                                    จัดเก็บข้อมูลได้ง่าย
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card-footer">
+                        <button type="button" class="btn btn-primary btn-package mb-2">รายละเอียเพิ่มเติม</button>
+                        <button type="button" class="btn btn-primary btn-package">เลือก</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
+    <script>
+
+        //OS
+        $('.card').click(function () {
+            $('.card').removeClass('active');
+            $(this).addClass('active');
+        });
+
+        //Datacenter
+        $('.dtc-list').click(function () {
+            $('.dtc-list').removeClass('active');
+            $(this).addClass('active');
+        });
+
+
+        //Slider
+        $("#cpu").slider();
+        $("#cpu").on("slide", function (e) {
+            $("#data-cpu").text(e.value);
+            cal()
+        });
+        $("#memory").slider();
+        $("#memory").on("slide", function (e) {
+            $("#data-memory").text(e.value);
+            cal()
+        });
+        $("#disk").slider();
+        $("#disk").on("slide", function (e) {
+            $("#data-disk").text(e.value);
+            cal()
+        });
+
+        //Tooltops
+        $('.fa-info-circle').tooltip()
+
+        function cal() {
+            var total = (parseFloat(document.getElementById("data-cpu").innerHTML) * 150 +
+                parseFloat(document.getElementById("data-memory").innerHTML) * 10 +
+                parseFloat(document.getElementById("data-disk").innerHTML) * 3.2) + 9;
+            Number.prototype.format = function (n, x) {
+                var re = '\\d(?=(\\d{' + (x || 3) + '})+' + (n > 0 ? '\\.' : '$') + ')';
+                return this.toFixed(Math.max(0, ~~n)).replace(new RegExp(re, 'g'), '$&,');
+            };
+            $("#totalprice").text('฿' + total.format());
+        }
+
+    </script>
 </body>
 
 </html>
