--- a/index.html
+++ b/index.html
@@ -657,16 +657,18 @@
                             <div class="review-box">
                                 <div class="media">
                                     <div class="media-icon">
-                                        <img src="images/user.png" alt="" class="img-fluid rounded-circle">
+                                        <img src="images/user2.png" alt="" class="img-fluid rounded-circle">
                                     </div>
 
                                     <div class="media-body">
-                                        <h3 class="media-heading">Dan Joldzic</h3>
+                                        <h3 class="media-heading">Freddy</h3>
                                         <p class="media-text">1 may 2018</p>
                                     </div>
                                 </div>
-                                <p class="f-18">“ตอบโจทย์การในงานของนักศึกษา ดีมากมี Solution หลากหลาย มีการใช้เทคโนโลยีที่ทันสมัย และยัง
-                                    ควบคุมการทำงานได้ง่ายด้วย ประหยัดงบผมได้มากเลยละ ทีมงาน ผม Happy”</p>
+                                <p class="f-18">“พี่เฟดดี้แฮปปี้มาก เวรี่กู้ดดดดดดดดดดด
+                                    <br>ดีมากมายมี Solution หลากหลาย
+                                    <br>มีการใช้เทคโนโลยีที่ทันสมัย
+                                    <br>:D”</p>
                             </div>
                         </li>
                     </ul>
