--- a/contact.html
+++ b/contact.html
@@ -237,7 +237,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-12 pb-5">
                     <div id="map"></div>
                 </div>
             </div>
@@ -280,7 +280,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-8 pb-5">
                     <div id="mapBig"></div>
                 </div>
             </div>
