--- a/product.html
+++ b/product.html
@@ -38,18 +38,18 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="index.html">หน้าแรก
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">
                                 ผลิตภัณฑ์
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="product.html">Cloud Server</a>
+                                <a class="dropdown-item active" href="product.html">Cloud Server</a>
                                 <a class="dropdown-item" href="#">Cloud Hosting</a>
                                 <a class="dropdown-item" href="#">Domain Name</a>
                                 <a class="dropdown-item" href="#">SSL</a>
