--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
         crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/customize.js"></script>
 
+    <link href="https://fonts.googleapis.com/css?family=Prompt:300,400,600|Roboto:300,400,500&amp;subset=thai" rel="stylesheet">
     <script>
         function initMap() {
             var myLatlng = new google.maps.LatLng(12.647613, 99.865162);
